--- a/Autocomplete_with_Javascript/Index.html
+++ b/Autocomplete_with_Javascript/Index.html
@@ -12,6 +12,57 @@
 	fieldset{
  	   margin-bottom: 4%;
 	}	
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   * {
+      box-sizing: border-box;
+   }
+   body {
+      margin: 10px;
+      padding: 0px;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+   }
+   .autocomplete {
+      position: relative;
+      display: inline-block;
+   }
+   input {
+      border: none;
+      background-color: #f1f1f1;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 4px;
+   }
+   input[type="text"] {
+      background-color: #e1f6fc;
+      width: 100%;
+   }
+   input[type="submit"] {
+      background-color: DodgerBlue;
+      color: #fff;
+      cursor: pointer;
+   }
+   .autocomplete-items {
+      position: absolute;
+      border-bottom: none;
+      border-top: none;
+      z-index: 99;
+      top: 100%;
+      left: 0;
+      right: 0;
+   }
+   .autocomplete-items div {
+      padding: 10px;
+      cursor: pointer;
+      border: 1px solid #8e26d4;
+      border-bottom: 1px solid #d4d4d4;
+   }
+   .autocomplete-items div:hover {
+      background-color: #e9e9e9;
+   }
+   .autocomplete-active {
+      background-color: rgb(30, 255, 169) !important;
+      color: #ffffff;
+   }
     </style>
   </head>
   <body>
@@ -33,55 +84,100 @@
 	</fieldset>
 
 	<input type = "submit" value = "Verify"/>	
-  { box-sizing: border-box; }
-body {
-  font: 16px Arial;
-}
-.autocomplete {
-  /*the container must be positioned relative:*/
-  position: relative;
-  display: inline-block;
-}
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-}
-input[type=text] {
-  background-color: #f1f1f1;
-  width: 100%;
-}
-input[type=submit] {
-  background-color: DodgerBlue;
-  color: #fff;
-}
-.autocomplete-items {
-  position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
-  left: 0;
-  right: 0;
-}
-.autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
-}
-.autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
-}
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
-}
     </form>
+	  <form autocomplete="off">
+<div class="autocomplete" style="width:300px;">
+<input id="searchField" type="text" name="shippingName" placeholder="shippingName" />
+	<input id="searchField" type="text" name="shippingzip" placeholder="shippingZip" />
+	<input id="searchField" type="text" name="billingzip" placeholder="billingZip" />
+	<input id="searchField" type="text" name="billingName" placeholder="billingName" />
+</div>
+<input type="submit" />
+</form>
+<script>
+   function autocomplete(searchEle, arr) {
+      var currentFocus;
+      searchEle.addEventListener("input", function(e) {
+         var divCreate,
+         b,
+         i,
+         fieldVal = this.value;
+         closeAllLists();
+         if (!fieldVal) {
+            return false;
+         }
+         currentFocus = -1;
+         divCreate = document.createElement("DIV");
+         divCreate.setAttribute("id", this.id + "autocomplete-list");
+         divCreate.setAttribute("class", "autocomplete-items");
+         this.parentNode.appendChild(divCreate);
+         for (i = 0; i <arr.length; i++) {
+            if ( arr[i].substr(0, fieldVal.length).toUpperCase() == fieldVal.toUpperCase() ) {
+               b = document.createElement("DIV");
+               b.innerHTML = "<strong>" + arr[i].substr(0, fieldVal.length) + "</strong>";
+               b.innerHTML += arr[i].substr(fieldVal.length);
+               b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+               b.addEventListener("click", function(e) {
+                  searchEle.value = this.getElementsByTagName("input")[0].value;
+                  closeAllLists();
+               });
+               divCreate.appendChild(b);
+            }
+         }
+      });
+      searchEle.addEventListener("keydown", function(e) {
+         var autocompleteList = document.getElementById(
+            this.id + "autocomplete-list"
+         );
+         if (autocompleteList)
+            autocompleteList = autocompleteList.getElementsByTagName("div");
+         if (e.keyCode == 40) {
+            currentFocus++;
+            addActive(autocompleteList);
+         }
+         else if (e.keyCode == 38) {
+            //up
+            currentFocus--;
+            addActive(autocompleteList);
+         }
+         else if (e.keyCode == 13) {
+            e.preventDefault();
+            if (currentFocus > -1) {
+               if (autocompleteList) autocompleteList[currentFocus].click();
+            }
+         }
+      });
+      function addActive(autocompleteList) {
+         if (!autocompleteList) return false;
+            removeActive(autocompleteList);
+         if (currentFocus >= autocompleteList.length) currentFocus = 0;
+         if (currentFocus < 0) currentFocus = autocompleteList.length - 1;
+         autocompleteList[currentFocus].classList.add("autocomplete-active");
+      }
+      function removeActive(autocompleteList) {
+         for (var i = 0; i < autocompleteList.length; i++) {
+            autocompleteList[i].classList.remove("autocomplete-active");
+         }
+      }
+      function closeAllLists(elmnt) {
+         var autocompleteList = document.getElementsByClassName(
+            "autocomplete-items"
+         );
+         for (var i = 0; i < autocompleteList.length; i++) {
+            if (elmnt != autocompleteList[i] && elmnt != searchEle) {
+               autocompleteList[i].parentNode.removeChild(autocompleteList[i]);
+            }
+         }
+      }
+      document.addEventListener("click", function(e) {
+         closeAllLists(e.target);
+      });
+   }
+ 
+   autocomplete(document.getElementById("searchField"), shippingName);
+	autocomplete(document.getElementById("searchField"), shippingZip);
+	autocomplete(document.getElementById("searchField"), billingName);
+	autocomplete(document.getElementById("searchField"), billingZip);
+</script>
   </body>
 </html>
